--- a/public/assignment/users/register.html
+++ b/public/assignment/users/register.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container-fluid">
 
-    <h2>Login</h2>
+    <h2>Register</h2>
 
     <label for="username">Username</label>
     <input name="username"
