--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+    <title>Theodore Landegger</title>
 </head>
 <body>
-    <h1>Web Dev Course Home Page</h1>
+    <h1>Theo's Websites</h1>
 
     <p>
         This is your website's home page. Your home page should have a picture of yourself, link to your assignments,
@@ -18,19 +18,13 @@
     <h2>Required links</h2>
     <ul>
         <li>
-            <a href="project/index.html">Project</a>
+            <a href="project/#!/login">Project</a>
         </li>
         <li>
-            <a href="assignment/">Assignment</a>
+            <a href="assignment/#!/login">Assignment</a>
         </li>
         <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="https://github.com/tlandegger/landegger_theodore-webdev">Your public repository at GitHub.com</a>
-        </li>
-        <li>
-            <a href="/lectures">Lectures</a>
+            <a href="https://github.com/tlandegger/landegger_theodore-webdev">Github</a>
         </li>
     </ul>
 </body>
