--- a/public/project/index.html
+++ b/public/project/index.html
@@ -11,6 +11,8 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="services/tournament.service.client.js"></script>
+    <script src="services/match.service.client.js"></script>
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
