Create Website views

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -16,6 +16,11 @@
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/tournament/controllers/tournament-list.controller.client.js"></script>
+    <script src="views/tournament/controllers/tournament-new.controller.client.js"></script>
+    <script src="views/tournament/controllers/tournament-edit.controller.client.js"></script>
+    <script src="views/match/controllers/match-list.controller.client.js"></script>
+    <script src="views/match/controllers/match-edit.controller.client.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet">
 
