--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Theodore Landegger</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Theo's Websites</h1>
 
     <p>
-        This is your website's home page. Your home page should have a picture of yourself, link to your assignments,
-        link to your final project implementation on Heroku, link to your GitHub,
-        link to a 5 minute video demoing your project. Your home page should look
-        spectacular. You should feel proud to share your homepage with your potential employer.
-        I should feel proud to share your homepage with my colleagues.
+        I'm an aspiring web developer hoping to change the world. Check out some of my work below!
     </p>
 
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/#!/login">Project</a>
-        </li>
-        <li>
-            <a href="assignment/#!/login">Assignment</a>
-        </li>
-        <li>
-            <a href="https://github.com/tlandegger/landegger_theodore-webdev">Github</a>
-        </li>
-    </ul>
+
+        <a class="btn btn-default btn-primary btn-block"
+           href="project/#!/login"
+           role="button">Project</a>
+    <a class="btn btn-default btn-danger btn-block"
+       href="assignment/#!/login"
+       role="button">Assignment</a>
+        <a class="btn btn-default btn-success btn-block"
+           href="https://github.com/tlandegger/landegger_theodore-webdev"
+           role="button">Github</a>
 </body>
 </html>
